assets/styles/main.css
* {
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}

html {
  font-size: 16px;
}

body {
  background-color: #15202B;
  font-family: roboto, sans-serif;
  color: white;
}

.about-me-link-icons a {
  color: white;
}

.about-me {
  padding-top: 100px;
  position: relative;
}

.about-me .about-me-footer {
  position: absolute;
  bottom: 2%;
  left: 50%;
}

.about-me .about-me-footer .about-me-link-icons {
  position: relative;
  left: -50%;
}

.about-me .right-arrows,
.about-me .left-arrows {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  bottom: 0;
  color: #b3bac5;
  margin-bottom: 0;
  font-size: 0.6rem;
}

.about-me .right-arrows {
  right: 0;
}

.about-me .left-arrows {
  left: 0;
}

h1,
ul {
  color: #1DA1F2;
}

ul li {
  color: #b3bac5;
}

.columns {
  margin: 0;
  margin-bottom: 3rem;
}

.navbar {
  -webkit-backdrop-filter: blur(10px);
          backdrop-filter: blur(10px);
  background-color: rgba(21, 32, 43, 0.5);
}

.navbar a {
  color: white;
}

.about-me-link-icons a:hover {
  color: #f17255;
}

.navbar-items-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.navbar-items-container .navbar-links {
  -webkit-box-flex: 1;
      -ms-flex-positive: 1;
          flex-grow: 1;
}

.navbar-items-container .icon-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
      -ms-flex: 1;
          flex: 1;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -ms-flex-pack: distribute;
      justify-content: space-around;
}

.navbar-items-container .icon-container a {
  display: block;
  height: 100%;
  width: 100%;
  line-height: 4;
}

.icon-container:hover {
  background-color: rgba(147, 144, 255, 0.3);
}

.icon-container:hover a {
  color: #f17255;
}

.navbar-image {
  max-width: 3rem;
  border-radius: 50%;
  -o-object-fit: cover;
     object-fit: cover;
  height: 3rem;
}

.about-me-card h1 {
  font-weight: bold;
}

hr {
  background-color: #b3bac5;
  margin: 0;
  height: 1px;
}

.about-me-specs {
  color: #b3bac5;
}

.about-me-specs .list {
  margin-bottom: 0;
}

.my-projects-divider,
.about-me-specs {
  width: 90%;
}

.my-projects {
  width: 100%;
}

.my-projects-title {
  padding-left: 1rem;
}

.project-image {
  width: 100%;
}

.description-title h3 {
  font-weight: bold;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -ms-flex-preferred-size: unset;
      flex-basis: unset;
}

.description-text {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  color: #b3bac5;
  font-family: inter, sans-serif;
  margin-bottom: 20px;
}

.description-text p {
  overflow: hidden;
  text-overflow: ellipsis;
}

.description-footer {
  -ms-flex-item-align: end;
      align-self: flex-end;
}

.grid-item-description {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
}

.grid-item-description ul {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
}

.grid-item-description ul li {
  color: white;
  margin-right: 0.5em;
  display: inline;
}

.grid-item-description ul li:not(:last-child)::after {
  content: "|";
  margin-left: 0.5em;
}

.grid-item-buttons {
  display: -ms-grid;
  display: grid;
  -ms-grid-columns: (minmax(0, 1fr))[auto-fit];
      grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
  -webkit-column-gap: 1rem;
          column-gap: 1rem;
}

.contact-me {
  position: relative;
}

.footer img {
  max-width: 30%;
}

.description-text-links {
  color: #f17255;
}

.description-text-links :hover {
  color: white;
}

.dot,
.dot2,
.dot3,
.dot4 {
  display: none;
}

@media screen and (max-width: 320px) {
  html {
    font-size: 14px;
  }
}

@media screen and (min-width: 411px) {
  html {
    font-size: 18px;
  }
  .about-me {
    padding-top: 100px;
  }
}

@media screen and (min-width: 1024px) and (min-height: 680px) {
  html {
    font-size: 22px;
  }
  .navbar-image {
    max-width: 4rem;
    height: 4rem;
  }
  .about-me-specs,
  .my-projects-divider {
    width: 100%;
  }
  .my-projects-grid:not(:last-child) {
    margin-bottom: 10rem;
  }
  .grid-item-description {
    height: 100%;
  }
  .description-text {
    margin-bottom: auto;
  }
  .my-projects-grid:nth-child(2n+2) .image-container {
    -webkit-box-ordinal-group: 2;
        -ms-flex-order: 1;
            order: 1;
  }
  .dot,
  .dot2,
  .dot3,
  .dot4 {
    display: inline-block;
    height: 10rem;
    width: 10rem;
    background-color: #bbb;
    border-radius: 50%;
    position: absolute;
    -webkit-filter: blur(120px);
            filter: blur(120px);
  }
  .dot {
    left: 2rem;
    top: 15rem;
  }
  .dot2 {
    right: 4rem;
    top: 30rem;
  }
  .dot3 {
    top: 1rem;
  }
  .dot4 {
    right: 4rem;
    top: 30rem;
  }
}

@media screen and (min-width: 2560px) {
  html {
    font-size: 26px;
  }
  .about-me {
    padding-top: 150px;
  }
}

@media screen and (max-height: 580px) {
  .about-me-card div:nth-child(n+4) {
    display: none;
  }
}
/*# sourceMappingURL=main.css.map */

